# goldenrod_renderer

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: frame_vertex.wgsl
assets/shaders/: compile.py  copy.wgsl  final.wgsl  frame.wgsl  frame_vertex.spv  frame_vertex.txt  frame_vertex.wgsl  pathtrace.wgsl  pathtrace_compute.spv  pathtrace_compute.txt  pathtrace_compute.wgsl  test_compute.spv  test_fragment.spv
assets/shaders/slang/: final.slang  frame.slang  pathtrace.slang
assets/shaders/slang/lib/: atmosphere.slang  header.slang  intersect.slang  material.slang  noise.slang  object.slang  space.slang  spectrum.slang
assets/shaders/spirv/: final.spv  frame.spv  pathtrace.spv
assets/slang/: copy.slang  final.slang  frame.slang  pathtrace.slang  test.slang
assets/slang/lib/: atmosphere.slang  header.slang  intersect.slang  material.slang  noise.slang  object.slang  space.slang  spectrum.slang
src/: egui.rs  main.rs  window.rs
src/app/: camera.rs  control.rs  events.rs  fps.rs  input.rs  lookup.rs  menu.rs  mod.rs  time.rs
src/app/camera/: binding.rs  mod.rs
src/app/object/: binding.rs  mod.rs
src/app/renderer/: display.rs  final_pass.rs  material.rs  mod.rs  pathtrace.rs  profiler.rs
src/app/renderer/passes/: material_pass.rs  mod.rs
src/ecs/: event.rs  mod.rs  schedule.rs
src/ecs/world/: schedule.rs
src/egui/: mod.rs
src/game/: input.rs  mod.rs  time.rs
src/render/: binding.rs  buffer.rs  mod.rs  shader.rs  texture.rs  timestamp.rs  vertex.rs
src/render/texture/: image.rs  mod.rs
src/util/: mod.rs
(+1 files in other folders)
