[package]
name = "goldenrod_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.27"
pollster = "0.4.0"

wgpu = "24.0.3"
winit = "0.30.8"

egui = "0.31.1"
egui-wgpu = { version = "0.31.1", features = ["winit"] }
egui-winit = "0.31.1"

bevy_ecs = { version = "0.16.0" }
glam = "0.30.0"

gpu_bytes_derive = { git = "https://github.com/ambrosia13/gpu_bytes_derive.git" }
gpu_bytes = { git = "https://github.com/ambrosia13/gpu_bytes.git" }
wgpu_util = { git = "https://github.com/ambrosia13/wgpu_util.git" }

bytemuck = "1.22.0"
regex = "1.11.1"
derive_deref = "1.1.1"
