[package]
name = "goldenrod_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.27"
pollster = "0.4.0"

wgpu = "25.0.0"
winit = "0.30.8"

egui = { git = "https://github.com/emilk/egui.git", rev = "ab9f55a" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "ab9f55a", features = ["winit"] }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "ab9f55a" }

bevy_ecs = { version = "0.16.0" }
glam = "0.30.0"

gpu_bytes_derive = { git = "https://github.com/ambrosia13/gpu_bytes_derive.git" }
gpu_bytes = { git = "https://github.com/ambrosia13/gpu_bytes.git" }
wgputil = { git = "https://github.com/ambrosia13/wgputil.git", branch = "main" }

bytemuck = "1.23.1"
regex = "1.11.1"
derive_deref = "1.1.1"
